src/main/resources/com/aviumauctores/pioneers/views/dark-theme.css
.root {
    -fx-background-color: rgb(0, 1, 17);
    -fx-text-fill: #eee;
}

.label {
    -fx-font-size: 14;
    -fx-text-fill: #eee;
}

.text-field {
    -fx-font-size: 14;
    -fx-background-radius: 8px;
    -fx-background-color: #545454;
    -fx-text-fill: #eee;
}

.button {
    -fx-background-color: #00496c;
    -fx-text-fill: #ffffff;
    -fx-background-radius: 15px;
    -fx-font-size: 14;
}

.button:hover {
    -fx-background-color: #005f91;
}

.scroll-bar {
    -fx-background-color: #00496c;
    -fx-background-radius: 15px;
}

.list-view > .viewport {
    -fx-background-color: transparent;
}

.list-view {
    -fx-background-color: #333333;
    -fx-background-radius: 8px;
}

.list-cell {
    -fx-background-color: #333333;
}

.list-cell:selected {
    -fx-background-color: #494949;
    -fx-background-radius: 8 8 8 8;
}

.list-view .corner {
    -fx-background-color: transparent ;
}

.text {
    -fx-text-fill: #eee;
}

.check-box {
    -fx-text-fill: #eee;
}

.scroll-pane > .viewport {
    -fx-background-color: transparent;
    -fx-background-radius: 0px;
}

.scroll-pane {
    -fx-background-color: #333333;
    -fx-background-radius: 0 0 8 8;
}

.tab-pane {
    -fx-background-color: #333333;
    -fx-background-radius: 8px;
}

.tab-header-background {
    -fx-background-color: #00496c;
    -fx-background-radius: 8 8 0 0;

}

.scroll-bar {
    -fx-background-color: #00496c;
    -fx-background-radius: 15px;
    -fx-progress-color: #c4c4c4;
}

.tab {
    -fx-background-color: #333333;
    -fx-text-base-color: #eee;
    -fx-background-radius: 8 8 0 0;
    -fx-focus-color: transparent;
}

.tab:selected {
    -fx-background-color: rgba(0, 255, 72, 0.21);
    -fx-text-base-color: #eee;
}

#chatpane {
    -fx-background-color: #333333;
    -fx-background-radius: 0 0 8 8;
    -fx-border-color: transparent;
}

.titled-pane > .title {
    -fx-background-color: #00496c;
    -fx-background-radius: 8 8 0 0;
}

.titled-pane {
    -fx-text-fill: #ffffff;
}

.titled-pane > *.content {
    -fx-background-radius: 0 0 8 8;
    -fx-background-color: #333333;
    -fx-border-radius: 0 0 8 8;
    -fx-text-fill: #111;
    -fx-border-color: transparent;
}

